--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,10 @@ jobs:
     docker:
       # specify the version you desire here
        - image: circleci/ruby:2.4.1-node-browsers
-      
+       - image: circleci/mysql:5.7
+           MYSQL_ALLOW_EMPTY_PASSWORD: yes
+           MYSQL_ROOT_PASSWORD: ''
+           MYSQL_DATABASE: circleci 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
       # documented at https://circleci.com/docs/2.0/circleci-images/
@@ -41,6 +44,10 @@ jobs:
       # - run: bundle exec rake db:schema:load
 
       # run tests!
+      - run:
+          name: MySQL version
+          command: bundle exec ruby mysql_version.rb 
+
       - run:
           name: run tests
           command: |
