--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,11 @@ jobs:
     docker:
       # specify the version you desire here
        - image: circleci/ruby:2.4.1-node-browsers
-      
+       - image: circleci/mysql:5.7
+         environment:
+           MYSQL_ALLOW_EMPTY_PASSWORD: yes
+           MYSQL_ROOT_PASSWORD: ''
+           MYSQL_DATABASE: circleci 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
       # documented at https://circleci.com/docs/2.0/circleci-images/
@@ -42,16 +46,10 @@ jobs:
 
       # run tests!
       - run:
+          name: MySQL version
+          command: bundle exec ruby mysql_version.rb 
+
+      - run:
           name: run tests
           command: |
-            mkdir /tmp/test-results
-            TEST_FILES="$(circleci tests glob "spec/**/*_spec.rb" | circleci tests split --split-by=timings)"
-            
             bundle exec rspec 
-
-      # collect reports
-      - store_test_results:
-          path: /tmp/test-results
-      - store_artifacts:
-          path: /tmp/test-results
-          destination: test-results
